Create Header and contentEmphasis

--- a/assets/css/1-base/_main.scss
+++ b/assets/css/1-base/_main.scss
@@ -1,20 +1,20 @@
 @use 'reset';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 // CONTAINER VARIABLE
-$largureContainer: reset.toRem(1440); // Adicionar 40px no valor do container para uso de padding no responsivo 
+$largureContainer: reset.toRem(1500); // Adicionar 40px no valor do container para uso de padding no responsivo 
 
 // VARIABLES
-$ColorZero:#3a9bfa;
-$ColorOne: #206ab2;
-$ColorTwo: #2c2b2a;
-$ColorThree: #1f252b;
-$ColorFour: #ffffff;
+$ColorMain:#A1BD04;
+$ColorMain2: #C3E309;
+$ColorOne: #03325B;
+$ColorTwo: #5F5F5F;
+$ColorThree: #ffffff;
+$ColorFour: #F0F5FD;
 
 /**/
 body {
-   background:$ColorTwo;
+   background:#FAFAFA;
    font-family: 'Poppins', sans-serif;
    color:$ColorThree;
    font-weight:500;
@@ -23,14 +23,12 @@ body {
 p {
    font-size: 1rem;
    font-family: 'Poppins', sans-serif;
-   color:$ColorThree;
-   line-height: 2;
-   font-weight: 500;
-   letter-spacing: 0.3px;
+   color:$ColorTwo;
+   line-height: 1.9;
+   font-weight: 300;
+   letter-spacing: 0.2px;
    margin-bottom: 20px;
 }
-
-
 
 // DISPLAY FLEX
 @mixin FlexBetCen {
@@ -43,45 +41,6 @@ p {
    display: flex;
    justify-content: center;
    align-items: center;
-} 
-
-
-// ESTILOS E TAMANHOS DE FONTE
-@mixin titleType1 {
-   font-size: reset.toRem(70);
-   font-weight: 900;
-} 
-
-@mixin titleType2 {
-   font-size: reset.toRem(50);
-   line-height: 1.2;
-   font-weight: 900;
-} 
-
-@mixin titleType3 {
-   font-size: reset.toRem(40);
-   font-weight: 900;
-} 
-
-@mixin titleType4 {
-   font-size: reset.toRem(30);
-   font-weight: 900;
-} 
-
-@mixin titleType5 {
-   font-size: reset.toRem(20);
-} 
-
-@mixin titleType6 {
-   font-size: reset.toRem(15);
-} 
-
-@mixin paragrafo_1 {
-   font-size: reset.toRem(18);
-} 
-
-@mixin paragrafo_2 {
-   font-size: reset.toRem(16);
 } 
 
 // BREAKPOINTS
@@ -110,8 +69,6 @@ p {
     @media (max-width: $largureContainer)  { @content ; }
  }
 }
-
-
 
 /*CONTAINER*/
 
