--- a/assets/css/2-layouts/content_index.scss
+++ b/assets/css/2-layouts/content_index.scss
@@ -6,3 +6,125 @@
   CONTENT INDEX
   ========================================
 */
+
+.contentEmphasis {
+  & .container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 0 70px;
+    margin-top: 50px;
+
+    & .__left {
+      width: 480px;
+
+      & h1 {
+        font-size: reset.toRem(40);
+        font-weight: 500;
+        color: main.$ColorMain;
+        line-height: 1.5;
+        position: relative;
+        margin-bottom: 25px;
+
+        &::after {
+          content: '';
+          position: absolute;
+          left: -20px;
+          top: 18px;
+          height: 109px;
+          width: 6px;
+          border-radius: 15px;
+          background: main.$ColorMain;
+        }
+      }
+
+      & .__list {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 35px 65px;
+        margin-top: 50px;
+        padding-bottom: 80px;
+
+        & div a {
+          width: 204px;
+          height: 240px;
+          background: main.$ColorFour;
+          border-radius: 20px;
+          text-align: center;
+          padding: 0 30px;
+          transition: 0.2s all;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 20px 0;
+
+          & * {
+            transition: 0.2s all;
+          }
+
+          & figure {
+            height: 78px;
+            display: flex;
+            align-items: center;
+          }
+
+          & span {
+            display: block;
+            color: main.$ColorOne;
+            font-size: reset.toRem(16);
+            font-weight: 500;
+            line-height: 25px;
+          }
+
+          &:hover {
+            background: main.$ColorMain 0% 0% no-repeat padding-box;
+            box-shadow: 0px 15px 30px main.$ColorMain;
+
+            & img {
+              filter:grayscale(0) brightness(0%) contrast(100%) invert(100%)!important
+            }
+
+            & span {
+              color:#ffffff;
+            }
+          }
+        }
+      }
+    }
+  
+    & .__right {
+      width: 530px;
+      padding-left: 55px;
+      padding-top: 75px;
+      position: relative;
+
+      & img {
+        position: relative;
+        z-index: 2;
+        filter: drop-shadow(0 -5px 36px rgba(11, 1, 171, 0.4));
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 5px;
+        left: 12px;
+        background: url("../img/circle_green_small.png") center no-repeat;
+        height: 327px;
+        width: 327px;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 150px;
+        right: -240px;
+        background: url("../img/circle_blue_big.png") center no-repeat;
+        height: 550px;
+        width: 550px;
+      }
+    }
+  }
+}
