--- a/assets/css/3-modules/menu_resp.scss
+++ b/assets/css/3-modules/menu_resp.scss
@@ -18,7 +18,7 @@
 }
 
 .dl-menuwrapper button {
-	background: main.$ColorOne url('../img/menu_icon.png') right 15px center no-repeat;
+	background: main.$ColorMain url('../img/menu_icon.png') right 15px center no-repeat;
 	border: none;
 	width: 100%;
 	height: 48px;
@@ -40,7 +40,7 @@
 
 .dl-menuwrapper button.dl-active {
 	color: #ffffff;
-	background: main.$ColorZero url('../img/menu-close.png') right 15px center no-repeat;
+	background: main.$ColorMain url('../img/menu-close.png') right 15px center no-repeat;
 }
 
 .dl-menuwrapper ul {
