--- a/assets/css/1-base/_main.scss
+++ b/assets/css/1-base/_main.scss
@@ -1,5 +1,5 @@
 @use 'reset';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 // CONTAINER VARIABLE
 $largureContainer: reset.toRem(1500); // Adicionar 40px no valor do container para uso de padding no responsivo 
