--- a/assets/css/2-layouts/footer.scss
+++ b/assets/css/2-layouts/footer.scss
@@ -12,21 +12,24 @@ footer {
 
   & .container {
     height: 100%;
+    max-width: 70rem;
 
     & .display {
       @include main.FlexBetCen;
       height: 90%;
 
       & .item1 {
-        width: 40%;
         @include main.FlexBetCen;
+        align-items:flex-end;
+        gap: 25px 35px;
 
         & .information {
-          width: 50%;
+          width: 240px;
 
           & p {
             font-size: reset.toRem(14);
             margin-top: 40px;
+            opacity: 0.5;
           }
 
           & a {
@@ -41,11 +44,12 @@ footer {
             & ul {
               & li {
                 line-height: 2.2;
-                margin: 10px;
+                margin: 6px;
                 transition: all 0.3s;
 
                 & a {
                   color: main.$ColorTwo;
+                  opacity: 0.5;
                   font-size: reset.toRem(16);
                   font-weight: 400;
                 }
@@ -66,6 +70,7 @@ footer {
         & p {
           font-weight: 400;
           margin-left: 25px;
+          opacity: 0.5;
         }
 
         & input {
@@ -79,14 +84,13 @@ footer {
         }
 
         & .button {
-          width: 135px;
+          width: 110px;
           position: absolute;
           top: 55px;
           right: 7px;
 
           &.--type_1 input {
             background: main.$ColorMain;
-            text-transform: uppercase;
             text-align: center;
             border-radius: 30px;
             padding: 0;
@@ -100,6 +104,9 @@ footer {
             transition: 0.3s all;
             border: none;
             cursor: pointer;
+            font-weight: 300;
+            text-shadow: 0px 1px 4px #00000040;
+            letter-spacing: 0.5px;
 
             &:hover {
               background: main.$ColorMain2;
