--- a/assets/css/3-modules/_form.scss
+++ b/assets/css/3-modules/_form.scss
@@ -17,17 +17,18 @@
 }
 
 .inputs select,
-.inputs input[type="text"], 
+.inputs input, 
 .inputs textarea {
       -webkit-appearance: none !important;
       -moz-appearance:     none !important;
       padding: reset.toRem(18) reset.toRem(16);
-      font-size: reset.toRem(16);
+      font-size: reset.toRem(15);
       border-radius: 35px;
-      background:#f3f3f3;
+      background:none;
       border: 2px solid #f3f3f3;
       outline: none;
-      color: #5b5a5a;
+      color: #9f9f9f;
+      font-weight: 300;
       font-family: 'Poppins', sans-serif;
       transition: all 0.5s ease;
   }
