--- a/assets/css/2-layouts/footer.scss
+++ b/assets/css/2-layouts/footer.scss
@@ -266,3 +266,15 @@ footer {
     }
   }
 }
+
+::-webkit-scrollbar-track {
+  background-color: main.$ColorThree;
+}
+::-webkit-scrollbar {
+  width: 8px;
+  background: main.$ColorThree;
+}
+::-webkit-scrollbar-thumb {
+  background: main.$ColorOne;
+  border-radius: 10px;
+}
