--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,9 +508,39 @@ footer .container .direitos p {
 */
 /*
   ========================================
-  PRODUTOS SERVICOS
+  PLANS VALUES
   ========================================
 */
+.plans_values .__textOne {
+  text-align: center;
+  margin-bottom: 130px;
+}
+.plans_values .__textOne h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #03325B;
+  margin-bottom: 40px;
+  letter-spacing: 1.6px;
+}
+.plans_values .__textOne h3 {
+  font-size: 1.5625rem;
+  font-weight: 300;
+  color: #03325B;
+  margin-bottom: 40px;
+}
+.plans_values .__textOne p {
+  margin-bottom: 30px;
+}
+.plans_values .incluse {
+  text-align: center;
+}
+.plans_values .incluse h4 {
+  font-size: 1.5625rem;
+  font-weight: 300;
+  color: #03325B;
+  margin-bottom: 20px;
+}
+
 /*
   ========================================
   FALE CONOSCO
@@ -802,22 +832,28 @@ All this is done for any sub-level being entered.
   BUTTONS
   ========================================
 */
-.button.--type_1 a {
+.button a {
   background: #A1BD04;
   text-transform: uppercase;
-  border-radius: 30px;
-  padding: 10px 22px;
+  border-radius: 35px;
   background: #A1BD04 0% 0% no-repeat padding-box;
   box-shadow: 0px 15px 30px #A1BD04;
   display: block;
-  font-size: 1rem;
   font-weight: 600;
   color: #ffffff;
   transition: 0.3s all;
 }
-.button.--type_1 a:hover {
+.button a:hover {
   background: #C3E309;
   box-shadow: 0px 1px 8px #C3E309;
+}
+.button.--type_1 a {
+  padding: 10px 22px;
+  font-size: 1rem;
+}
+.button.--type_2 a {
+  padding: 22px 26px;
+  font-size: 1.5625rem;
 }
 
 /*
@@ -829,26 +865,42 @@ All this is done for any sub-level being entered.
   text-align: center;
   padding-bottom: 50px;
 }
-.findPlan .__titleType1 {
+.findPlan .__title.--type1 {
   text-align: center;
 }
-.findPlan .__titleType1 h2 {
+.findPlan .__title.--type1 h2 {
   font-size: 1rem;
   font-weight: 600;
   color: #A1BD04;
   margin-bottom: 10px;
   letter-spacing: 1.6px;
 }
-.findPlan .__titleType1 h3 {
+.findPlan .__title.--type1 h3 {
   font-size: 2.5rem;
   font-weight: 700;
   color: #03325B;
   margin-bottom: 10px;
 }
-.findPlan .__titleType1 p {
+.findPlan .__title.--type1 p {
   margin: 0;
 }
-.findPlan .__titleType1 p span {
+.findPlan .__title.--type1 p span {
+  color: #A1BD04;
+}
+.findPlan .__title.--type2 {
+  text-align: center;
+}
+.findPlan .__title.--type2 h2 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  color: #A1BD04;
+  margin-bottom: 10px;
+  letter-spacing: 1.6px;
+}
+.findPlan .__title.--type2 p {
+  margin: 0;
+}
+.findPlan .__title.--type2 p span {
   color: #A1BD04;
 }
 .findPlan .__display {
@@ -1054,6 +1106,165 @@ All this is done for any sub-level being entered.
   font-weight: 300;
   color: #03325B;
   line-height: 1.4;
+}
+
+/*
+  ========================================
+  CALL TEST
+  ========================================
+*/
+.call_test {
+  text-align: center;
+  padding: 55px 0 90px 0;
+}
+.call_test h2 {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #A1BD04;
+  margin-bottom: 12px;
+  letter-spacing: 1px;
+}
+.call_test h3 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #03325B;
+  margin-bottom: 10px;
+}
+.call_test p {
+  margin: 0;
+  text-align: center;
+}
+.call_test p::after {
+  content: "";
+  width: 180px;
+  height: 4px;
+  background: #A1BD04;
+  display: block;
+  border-radius: 10px;
+  margin: 12px auto;
+}
+.call_test .button {
+  display: inline-block;
+  margin-top: 45px;
+}
+
+.findPlan {
+  text-align: center;
+  padding-bottom: 50px;
+}
+.findPlan .__titleType1 {
+  text-align: center;
+}
+.findPlan .__titleType1 h2 {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #A1BD04;
+  margin-bottom: 10px;
+  letter-spacing: 1.6px;
+}
+.findPlan .__titleType1 h3 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #03325B;
+  margin-bottom: 10px;
+}
+.findPlan .__titleType1 p {
+  margin: 0;
+}
+.findPlan .__titleType1 p span {
+  color: #A1BD04;
+}
+.findPlan .__display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px 32px;
+  flex-wrap: wrap;
+  margin-top: 45px;
+  /*EMPHASIS*/
+}
+.findPlan .__display .item {
+  width: 370px;
+  border: 1px solid #D1DBE3;
+  border-radius: 15px;
+  padding: 45px 25px;
+  text-align: center;
+  margin-bottom: 35px;
+}
+.findPlan .__display .item span {
+  display: block;
+}
+.findPlan .__display .item .type1 {
+  font-size: 0.9375rem;
+  font-weight: 500;
+  color: #5F5F5F;
+  margin-bottom: 8px;
+}
+.findPlan .__display .item .type2 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #03325B;
+  margin-bottom: 22px;
+}
+.findPlan .__display .item .type3 {
+  font-size: 1rem;
+  font-weight: 300;
+  color: #5F5F5F;
+  margin-bottom: 8px;
+  line-height: 1.8;
+}
+.findPlan .__display .item .type4 {
+  font-size: 1.5625rem;
+  font-weight: 700;
+  color: #A1BD04;
+  margin: 30px 0 40px 0;
+}
+.findPlan .__display .item .type5 {
+  font-size: 1.125rem;
+  font-weight: 600;
+  color: #A1BD04;
+  margin-bottom: 5px;
+}
+.findPlan .__display .item .type6 {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #A1BD04;
+}
+.findPlan .__display .item a {
+  display: inline-block;
+  margin-top: 20px;
+  border-radius: 14px;
+}
+.findPlan .__display .--emphasis {
+  padding: 50px 25px;
+  background: #A1BD04 0% 0% no-repeat padding-box;
+  box-shadow: 0px 15px 30px #A1BD04;
+  border: 1px solid #A1BD04;
+}
+.findPlan .__display .--emphasis .type2 {
+  margin-bottom: 10px;
+}
+.findPlan .__display .--emphasis .type3 {
+  color: #ffffff;
+}
+.findPlan .__display .--emphasis .type3.--gray {
+  color: #5F5F5F;
+}
+.findPlan .__display .--emphasis .type4 {
+  color: #ffffff;
+  margin: 25px 0 50px 0;
+}
+.findPlan .__display .--emphasis .type5 {
+  color: #ffffff;
+}
+.findPlan .__display .--emphasis .type6 {
+  color: #ffffff;
+  margin-bottom: 35px;
+}
+.findPlan .__display .--emphasis a {
+  margin-top: 40px;
+  border: 2px solid #ffffff;
+  color: #ffffff;
 }
 
 /**/
